--- a/Laboration_CNN/Laboration.ipynb
+++ b/Laboration_CNN/Laboration.ipynb
@@ -857,7 +857,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Deep_learning_CNN",
    "language": "python",
    "name": "python3"
   },
@@ -871,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
